--- a/drafting_cover.html
+++ b/drafting_cover.html
@@ -2,9 +2,10 @@
 <html>
   <body>
     <h1>MUSIC APP</h1>
+    <input type="range" class="slider" min="1" max="100">
+    <div></div>
     <img id="album-cover" src="https://i.etsystatic.com/38501418/r/il/a13085/4510104766/il_1588xN.4510104766_2udh.jpg" width=50px height=50px></img>
-    <button type = "button">WOW</button>
-    
+  
     
   </body>
 </html>
